--- a/.github/workflows/atcoder_fetch_user.yml
+++ b/.github/workflows/atcoder_fetch_user.yml
@@ -43,13 +43,13 @@ jobs:
         with:
           version: '1.10'
       
-      - name: Cache Julia packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.julia
-          key: ${{ runner.os }}-julia-${{ hashFiles('Project.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-julia-
+      # - name: Cache Julia packages
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ~/.julia
+      #     key: ${{ runner.os }}-julia-${{ hashFiles('Project.toml') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-julia-
 
       - name: Fetch User
         run: julia scripts/atcoder/fetch_user.jl
