--- a/.github/workflows/atcoder_fetch_statement.yml
+++ b/.github/workflows/atcoder_fetch_statement.yml
@@ -44,13 +44,13 @@ jobs:
         with:
           version: '1.10'
       
-      - name: Cache Julia packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.julia
-          key: ${{ runner.os }}-julia-${{ hashFiles('Project.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-julia-
+      # - name: Cache Julia packages
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ~/.julia
+      #     key: ${{ runner.os }}-julia-${{ hashFiles('Project.toml') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-julia-
 
       # - name: Install Pandoc
       #   run: |
