--- a/.github/workflows/atcoder_generate.yml
+++ b/.github/workflows/atcoder_generate.yml
@@ -50,13 +50,13 @@ jobs:
         with:
           version: '1.10'
       
-      - name: Cache Julia packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.julia
-          key: ${{ runner.os }}-julia-${{ hashFiles('Project.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-julia-
+      # - name: Cache Julia packages
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ~/.julia
+      #     key: ${{ runner.os }}-julia-${{ hashFiles('Project.toml') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-julia-
       
       - name: Generate
         run: julia scripts/atcoder/generate.jl
@@ -65,9 +65,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.x
+          cache: pip
       
       - name: Cache pip
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
