--- a/.github/workflows/atcoder_generate.yml
+++ b/.github/workflows/atcoder_generate.yml
@@ -135,7 +135,6 @@ jobs:
     if: ${{ always() }}
     runs-on: ubuntu-latest
     steps:
-      - name: Delete Artifact
-        uses: geekyeggo/delete-artifact@v5
+      - uses: geekyeggo/delete-artifact@v5
         with:
           name: github-pages
