--- a/.github/workflows/atcoder_generate.yml
+++ b/.github/workflows/atcoder_generate.yml
@@ -80,10 +80,18 @@ jobs:
       
       - name: Link /src
         run: ln -s ../src docs/src
+      
+      - name: Cache Build
+        uses: actions/cache@v4
+        with:
+          path: build
+          key: ${{ runner.os }}-mkdocs-build-${{ hashFiles('mkdocs.yml','docs/atcoder/**','src/atcoder/**') }}
+          restore-keys: |
+            ${{ runner.os }}-mkdocs-build-
 
       - name: Build
         run: |
-          mkdocs build -d build
+          mkdocs build --dirty -d build
       
       - name: Upload Artifact
         uses: actions/upload-pages-artifact@v3
