--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -7,8 +7,8 @@ on:
     paths:
       - '.github/workflows/generate.yml'
       - 'mkdocs.yml'
-      - 'scripts/atcoder/generate.jl'
-      - 'src/atcoder/**'
+      - 'scripts/**/generate.jl'
+      - 'src/**'
   workflow_run:
     workflows:
       - atcoder_fetch_statement
