--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,18 @@
         "stacktrace": "cpp",
         "text_encoding": "cpp",
         "regex": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "atomic": "cpp",
+        "cwchar": "cpp",
+        "exception": "cpp",
+        "iosfwd": "cpp",
+        "istream": "cpp",
+        "new": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "random": "cpp",
+        "limits": "cpp"
     }
 }
